# SyncCanvas

./: .gitignore  .pylintrc  README.md  config.toml  generated_mask.css  main.py  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  test_ws.py  user_rules.md  ystore.db  项目规划书.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: precheck.yml  ruff-format.yml  ruff.yml
config/: config.example.toml
docs/: agent_architecture.md  ai_agent.md  development.md  features.md  frontend_todo.md  rescue_plan.md  rescue_plan_update.md  todo.md  项目介绍文档.md
frontend/: .prettierrc.json  build_log.txt  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
scratch/3d-cube-form-demo/: index.html
scripts/: apply_css_mask.py  generate_css_mask.py  generate_wavy_mask.py  migrate_db.py  test_agent_tools.py  test_pathfinding.py  test_scenarios.py  test_text.py
src/: __init__.py  config.py  deps.py  logger.py
src/agent/: __init__.py  base.py  canvas_agent.py  canvaser.py  context.py  errors.py  llm.py  planner.py  registry.py  retry.py  state.py
src/ai/: __init__.py  agent.py  toolkit.py
src/api/: __init__.py  (+4 more)
test/: run_all.py  test_elements.py  test_geometry.py  test_layout.py
tests/: test_db_write_paths.py  test_diagram_blueprint_fallback.py  test_diagram_layout_recovery.py  test_diagram_routing_and_prompting.py  test_logging_filters.py  test_persistence.py
(+423 files in other folders)
